--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,3 +1,3 @@
-token: ""
+token: "5366406520:AAFYDW6wePy-l-ZJkJv1OgMac5LpTjTv74Q"
 url_api: https://api.telegram.org/bot
-timeout: 2000000
+timeout: 1000000
